Latest change updated 12-13-2012 Version 0.5a

I have added a change to the output of segregating sites to support listing of the age of mutations.  This is the third column, preceding the column of bits representing the mutations across all haplotypes.  The msformat.cpp parser has been updated to accommodate this change.

Latest change updated 08-13-2012 Version 0.4f

Stephan Schiffels gratefully fixed a bug in which precision of tree length would progressively degrade as trees were sampled from left to right on the chromosome. 

Latest change updated 11-09-2011 Version 0.4e

Thanks to Etienne Patin for pointing out a bug where SNP ascertainment failed when more than one simulation iteration was requested.  The bug is now fixed.  Vincenza Colonna pointed out discrepancies in the information headers regarding population IDs.  The headers now refer to populations as 1-indexed wheras previously some 0-indexed pop IDs were printed to screen. Note that users should refer to populations using 1-indexed pop IDs.

Latest change updated 4-26-2011 Version 0.4d

Thanks to Vincenza Colonna for spotting an inconsistency between what the command line parameters for pop IDs are echoed to screen and how they are specified by the user. 

Latest change updated 3-10-2011 Version 0.4c

Thanks to Ni Huang and Vincenza Colonna for spotting and fixing a bug in the command line parser, so that the program will support negative values in parameter arguments, and not confuse these are new options.